--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookies-next": "^4.1.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "next": "14.0.2",
+    "next-auth": "^5.0.0-beta.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.9.3",
+    "sharp": "^0.32.6",
+    "use-debounce": "^9.0.4"
   }
 }
